--- a/main.html
+++ b/main.html
@@ -3,8 +3,12 @@
 <html>
 
 <head>
+     <title>Your page Title</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	<div> 
+		My current favourite song is <a href="http://www.youtube.com/watch?v=your_song_vidio_id">afarreen</a>
+	</div>
 
 <body>
 	<!-- the entire body must be written by student -->
